--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
 <body>
     <header role="banner">
         <nav role="navigation">
+            <ul>
+                <li><a href="#about-me" aria-label="About Me"> About Me</a></li>
+                <li><a href="#services" aria-label="Services"> Services</a></li>
+                <li><a href="#my-work" aria-label="My Work"> My Work</a></li>
+                <li><a href="#contact-me" aria-label="Contact Me"> Contact Me</a></li>
+            </ul>
         </nav>
     </header>  
           
 <main role="main">
-    <section>
-        
+
+    <section id="about-me">
+    </section>
+
+    <section id="services">
+    </section>
+
+    <section id="my-work">
+    </section>
+
+    <section id="contact-me">
     </section>
 </main>
 
