Add headers to every section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header role="banner">
         <nav role="navigation">
+            <h1>Jessica Bell + Logo</h1>
             <ul>
                 <li><a href="#about-me" aria-label="About Me"> About Me</a></li>
                 <li><a href="#services" aria-label="Services"> Services</a></li>
@@ -21,17 +22,27 @@
     </header>  
           
 <main role="main">
+    <h2>Hello and welcome to my bio!</h2>
 
     <section id="about-me">
+    <h3>About Me.</h3>
+        <p>My name is Jessica Bell and I am currently a student of Graphic Design at Algonquin College.</p>
+        <p>Through my studies, I have developed a solid foundation in design principles and have gained experience with a variety of design tools, including Adobe Creative Suite (Photoshop, Illustrator, InDesign), Figma, and Sketch.</p>
+        <p>I am passionate about typography, layout design, and branding. I have also had the opportunity to experiment with other areas of design, such as motion graphics and web design.</p>  
     </section>
 
     <section id="services">
+    <h3>What I can do for you...</h3>
     </section>
 
     <section id="my-work">
+    <h3>My Work</h3>
+        <p>I have already worked on a range of projects during my time in school. These projects have allowed me to further develop my skills and apply what I have learned in a real-world setting.</p>
     </section>
 
     <section id="contact-me">
+    <h3>I craft brands, websites, and experiences with great attention to detail & determination to tell your story.</h3>
+        <p>Interested in working together? Email me at yourname@email.com or check out more of my work on social media. </p>
     </section>
 </main>
 
