--- a/index.html
+++ b/index.html
@@ -4,49 +4,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Final Project</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header role="banner">
         <nav role="navigation">
-            <h1>Jessica Bell + Logo</h1>
+            <p>Jessica Bell<p>
             <ul>
                 <li><a href="#about-me" aria-label="About Me"> About Me</a></li>
                 <li><a href="#services" aria-label="Services"> Services</a></li>
                 <li><a href="#my-work" aria-label="My Work"> My Work</a></li>
                 <li><a href="#contact-me" aria-label="Contact Me"> Contact Me</a></li>
             </ul>
+            <img src=".//images/hero-banner-img.png" alt="Bio Picture">
         </nav>
     </header>  
           
 <main role="main">
-    <h2>Hello and welcome to my bio!</h2>
+    <div class="about">
+    <div><h1>Hello and welcome to my bio!</h1>
+        <section id="about-me">
+        <h2>About Me.</h2>
+            <p>My name is Jessica Bell and I am currently a student of Graphic Design at Algonquin College.</p>
+            <p>Through my studies, I have developed a solid foundation in design principles and have gained experience with a variety of design tools, including Adobe Creative Suite (Photoshop, Illustrator, InDesign), Figma, and Sketch.</p>
+            <p>I am passionate about typography, layout design, and branding. I have also had the opportunity to experiment with other areas of design, such as motion graphics and web design.</p></div>
+            <div><img src=".//images/bio-pic.jpg" alt="Bio Picture"></div>
+        </section>
+    </div>
 
-    <section id="about-me">
-    <h3>About Me.</h3>
-        <p>My name is Jessica Bell and I am currently a student of Graphic Design at Algonquin College.</p>
-        <p>Through my studies, I have developed a solid foundation in design principles and have gained experience with a variety of design tools, including Adobe Creative Suite (Photoshop, Illustrator, InDesign), Figma, and Sketch.</p>
-        <p>I am passionate about typography, layout design, and branding. I have also had the opportunity to experiment with other areas of design, such as motion graphics and web design.</p>  
-    </section>
-
-    <section id="services">
-    <h3>What I can do for you...</h3>
+    <section class="services" id="services">
+    <h2>What I can do for you...</h2>
+    <div>
+        <h3>Logo Creation</h3>
+            <p>Your logo is the face of your brand and the first thing that potential customers will see, so it's crucial to make a great first impression. I can help create a logo that is both visually stunning and effective in representing your brand.</p>
+            <p>$X,XXX</p>
+            <a href="#" aria-label="Learn More"> Learn More</a>
+    </div>
+    <div>
+        <h3>Web Design</h3>
+            <p>Your website is often the first interaction customers have with your business, so it's important to make a strong first impression. I can help you create a website that not only looks great but also functions flawlessly and engages your target audience.</p>
+            <p>$X,XXX</p>
+            <a href="#" aria-label="Learn More"> Learn More</a>
+    </div>
+    <div>
+        <h3>Full Branding</h3>
+            <p>Your brand is much more than just a logo or a website. It's the overall image that your business presents to the world, including the look, feel, and voice of your brand. I can help you create a cohesive and impactful brand that resonates with your target audience and sets you apart from your competitors.</p>
+            <p>$X,XXX</p>
+            <a href="#" aria-label="Learn More"> Learn More</a>
+    </div>
     </section>
 
     <section id="my-work">
-    <h3>My Work</h3>
+    <article>
+        <h2>My Work</h2>
         <p>I have already worked on a range of projects during my time in school. These projects have allowed me to further develop my skills and apply what I have learned in a real-world setting.</p>
+    </article>
+
+    <div class="portfolio-pieces">
+    <div class="piece-1"><img src=".//images/portfolio-piece-1.jpg" alt="Bio Picture"></div>
+    <div class="piece-2"><img src=".//images/portfolio-piece-2.jpg" alt="Bio Picture"></div>
+    <div class="piece-3"><img src=".//images/portfolio-piece-3.jpg" alt="Bio Picture"></div>
+    <div class="piece-4"><img src=".//images/portfolio-piece-4.jpg" alt="Bio Picture"></div>
+    <div class="piece-5"><img src=".//images/portfolio-piece-5.jpg" alt="Bio Picture"></div>
+    </div>
+
+    <article>
+        <h2>They tell it better than I ever could</h2>
+            <blockquote>“We were thrilled to have selected [Insert Name] to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
+            <p>John Smith, project manager at XYZ </p>
+            <blockquote>“I had the pleasure of working with [Insert Name] on a recent project, and I couldn't be more impressed with their work. Not only did they bring my vision to life, but they also added their own creative touches that took the project to the next level.”</blockquote>
+            <p>John Smith, project manager at XYZ </p>
+    </article>
     </section>
 
     <section id="contact-me">
-    <h3>I craft brands, websites, and experiences with great attention to detail & determination to tell your story.</h3>
+    <h2>I craft brands, websites, and experiences with great attention to detail & determination to tell your story.</h2>
         <p>Interested in working together? Email me at yourname@email.com or check out more of my work on social media. </p>
     </section>
+
+    <div class="social-icons">
+        <div><img src=".//images/instagram.svg" alt="Bio Picture"></div>
+        <div><img src=".//images/facebook.svg" alt="Bio Picture"></div>
+        <div><img src=".//images/twitter.svg" alt="Bio Picture"></div>
+    </div>
+
 </main>
 
 <footer role="contentinfo">
+        <p><small>&copy; Jessica Bell 2023</small></p>
+    </footer>
 </footer>
 </body>
 </html>
