--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     <div class="piece-5"><img src=".//images/portfolio-piece-5.jpg" alt="Bio Picture"></div>
     </div>
 
-    <article>
+    <article class="block-quotes">
         <h2>They tell it better than I ever could</h2>
             <blockquote>“We were thrilled to have selected [Insert Name] to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
             <p>John Smith, project manager at XYZ </p>
