--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 
     <section class="services" id="services">
     <h2>What I can do for you...</h2>
-    <div>
+    <div class="service-1">
         <h3>Logo Creation</h3>
             <p>Your logo is the face of your brand and the first thing that potential customers will see, so it's crucial to make a great first impression. I can help create a logo that is both visually stunning and effective in representing your brand.</p>
             <p>$X,XXX</p>
             <a href="#" aria-label="Learn More"> Learn More</a>
     </div>
-    <div>
+    <div class="service-2">
         <h3>Web Design</h3>
             <p>Your website is often the first interaction customers have with your business, so it's important to make a strong first impression. I can help you create a website that not only looks great but also functions flawlessly and engages your target audience.</p>
             <p>$X,XXX</p>
             <a href="#" aria-label="Learn More"> Learn More</a>
     </div>
-    <div>
+    <div class="service-3">
         <h3>Full Branding</h3>
             <p>Your brand is much more than just a logo or a website. It's the overall image that your business presents to the world, including the look, feel, and voice of your brand. I can help you create a cohesive and impactful brand that resonates with your target audience and sets you apart from your competitors.</p>
             <p>$X,XXX</p>
