Update html and css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><a href="#my-work" aria-label="My Work"> My Work</a></li>
                 <li><a href="#contact-me" aria-label="Contact Me"> Contact Me</a></li>
             </ul>
-            <img src=".//images/hero-banner-img.png" alt="Bio Picture">
         </nav>
+        <img src=".//images/hero-banner-img.png" alt="Banner">
     </header>  
           
 <main role="main">
@@ -37,8 +37,9 @@
         </section>
     </div>
 
-    <section class="services" id="services">
+    <section id="services">
     <h2>What I can do for you...</h2>
+    <div class="services">
     <div class="service-1">
         <h3>Logo Creation</h3>
             <p>Your logo is the face of your brand and the first thing that potential customers will see, so it's crucial to make a great first impression. I can help create a logo that is both visually stunning and effective in representing your brand.</p>
@@ -56,6 +57,7 @@
             <p>Your brand is much more than just a logo or a website. It's the overall image that your business presents to the world, including the look, feel, and voice of your brand. I can help you create a cohesive and impactful brand that resonates with your target audience and sets you apart from your competitors.</p>
             <p>$X,XXX</p>
             <a href="#" aria-label="Learn More"> Learn More</a>
+        </div>
     </div>
     </section>
 
@@ -66,25 +68,31 @@
     </article>
 
     <div class="portfolio-pieces">
-    <div class="piece-1"><img src=".//images/portfolio-piece-1.jpg" alt="Bio Picture"></div>
-    <div class="piece-2"><img src=".//images/portfolio-piece-2.jpg" alt="Bio Picture"></div>
-    <div class="piece-3"><img src=".//images/portfolio-piece-3.jpg" alt="Bio Picture"></div>
-    <div class="piece-4"><img src=".//images/portfolio-piece-4.jpg" alt="Bio Picture"></div>
-    <div class="piece-5"><img src=".//images/portfolio-piece-5.jpg" alt="Bio Picture"></div>
+    <div class="piece-1"><img src=".//images/portfolio-piece-1.jpg" alt="Piece 1"></div>
+    <div class="piece-2"><img src=".//images/portfolio-piece-2.jpg" alt="Piece 2"></div>
+    <div class="piece-3"><img src=".//images/portfolio-piece-3.jpg" alt="Piece 3"></div>
+    <div class="piece-4"><img src=".//images/portfolio-piece-4.jpg" alt="Piece 4"></div>
+    <div class="piece-5"><img src=".//images/portfolio-piece-5.jpg" alt="Piece 5"></div>
     </div>
 
     <article class="block-quotes">
         <h2>They tell it better than I ever could</h2>
-            <blockquote>“We were thrilled to have selected [Insert Name] to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
+        <div class="block">
+            <div class="block1">  
+            <blockquote>“We were thrilled to have selected Jessica to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
             <p>John Smith, project manager at XYZ </p>
-            <blockquote>“I had the pleasure of working with [Insert Name] on a recent project, and I couldn't be more impressed with their work. Not only did they bring my vision to life, but they also added their own creative touches that took the project to the next level.”</blockquote>
+            </div>
+            <div class="block2">  
+            <blockquote>“I had the pleasure of working with Jessica on a recent project, and I couldn't be more impressed with their work. Not only did they bring my vision to life, but they also added their own creative touches that took the project to the next level.”</blockquote>
             <p>John Smith, project manager at XYZ </p>
+        </div>
+        </div>
     </article>
     </section>
 
     <section id="contact-me">
     <h2>I craft brands, websites, and experiences with great attention to detail & determination to tell your story.</h2>
-        <p>Interested in working together? Email me at yourname@email.com or check out more of my work on social media. </p>
+        <p>Interested in working together? Email me at jessicabell@email.com or check out more of my work on social media. </p>
     </section>
 
     <div class="social-icons">
