Fix issues css and html

--- a/index.html
+++ b/index.html
@@ -62,32 +62,32 @@
     </section>
 
     <section id="my-work">
-    <article>
+    <div class="work">
         <h2>My Work</h2>
         <p>I have already worked on a range of projects during my time in school. These projects have allowed me to further develop my skills and apply what I have learned in a real-world setting.</p>
-    </article>
-
-    <div class="portfolio-pieces">
-    <div class="piece-1"><img src=".//images/portfolio-piece-1.jpg" alt="Piece 1"></div>
-    <div class="piece-2"><img src=".//images/portfolio-piece-2.jpg" alt="Piece 2"></div>
-    <div class="piece-3"><img src=".//images/portfolio-piece-3.jpg" alt="Piece 3"></div>
-    <div class="piece-4"><img src=".//images/portfolio-piece-4.jpg" alt="Piece 4"></div>
-    <div class="piece-5"><img src=".//images/portfolio-piece-5.jpg" alt="Piece 5"></div>
     </div>
 
-    <article class="block-quotes">
+    <div class="portfolio-pieces">
+    <img src=".//images/portfolio-piece-1.jpg" alt="Piece 1">
+    <img src=".//images/portfolio-piece-2.jpg" alt="Piece 2">
+    <img src=".//images/portfolio-piece-3.jpg" alt="Piece 3">
+    <img src=".//images/portfolio-piece-4.jpg" alt="Piece 4">
+    <img src=".//images/portfolio-piece-5.jpg" alt="Piece 5">
+    </div>
+    </section>
+
+    <section class="block-quotes">
         <h2>They tell it better than I ever could</h2>
         <div class="block">
-            <div class="block1">  
-            <blockquote>“We were thrilled to have selected Jessica to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
-            <p>John Smith, project manager at XYZ </p>
+            <div>  
+            <blockquote>“We were thrilled to have selected Jessica Bell to redesign the software icons for our new brand. Their professionalism, skill, and attention to detail stood out among the candidates we considered.”</blockquote>
+            <cite>John Smith, project manager at XYZ </cite>
             </div>
-            <div class="block2">  
-            <blockquote>“I had the pleasure of working with Jessica on a recent project, and I couldn't be more impressed with their work. Not only did they bring my vision to life, but they also added their own creative touches that took the project to the next level.”</blockquote>
-            <p>John Smith, project manager at XYZ </p>
-        </div>
-        </div>
-    </article>
+            <div>  
+            <blockquote>“I had the pleasure of working with Jessica Bell on a recent project, and I couldn't be more impressed with their work. Not only did they bring my vision to life, but they also added their own creative touches that took the project to the next level.”</blockquote>
+            <cite>John Smith, project manager at XYZ </cite>
+            </div>
+    </div>
     </section>
 
     <section id="contact-me">
