Link to social media pages in index.html

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </section>
 
     <div class="social-icons">
-        <div><img src=".//images/instagram.svg" alt="Bio Picture"></div>
-        <div><img src=".//images/facebook.svg" alt="Bio Picture"></div>
-        <div><img src=".//images/twitter.svg" alt="Bio Picture"></div>
+        <div><li><a href="https://instagram.com" aria-label="My Instagram page"> <img src=".//images/instagram.svg" alt="Bio Picture"></a></li></div>
+        <div><li><a href="https://facebook.com" aria-label="My Facebook page"> <img src=".//images/facebook.svg" alt="Bio Picture"></a></li></div>
+        <div><li><a href="https://twitter.com" aria-label="My Twitter page"> <img src=".//images/twitter.svg" alt="Bio Picture"></a></li></div>
     </div>
 
 </main>
